--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ico": "^0.3.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
+    "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
