--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
     "ico": "^0.3.3",
+    "multi-range-slider-react": "^2.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-countup": "^6.4.2",
