--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
     "ico": "^0.3.3",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "multi-range-slider-react": "^2.0.3",
     "react": "^18.2.0",
@@ -26,6 +27,7 @@
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.10",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
