--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "react-scroll-trigger": "^0.6.14",
     "styled-components": "^5.3.10",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4"
